Falta - 1 - separar capitulo problemas - 2 - meter teamwork ingenieria vs c.sociales? -

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -40,7 +40,7 @@ El objetivo principal de esta tesis doctoral es:
 
 \paragraph*{\emph{Proponer un método para evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje.}}
 
-Para abordar este objetivo ha de conocerse primero el estado del arte, dando respuesta para ello a diferentes preguntas de investigación. Las preguntas habrán de dar repuesta a interrogantes tales cómo cuáles son las competencias genéricas que se han evaluado haciendo uso de la informática, así como qué métodos se han utilizado y si se están usando para este fin los registros de actividad de los entornos virtuales.
+Para abordar este objetivo ha de conocerse primero el estado del arte, dando respuesta para ello a diferentes preguntas de investigación. Las preguntas habrán de dar repuesta a interrogantes tales cómo cuáles son las competencias genéricas que se han evaluado haciendo uso de métodos y técnicas informáticas, así como cuáles son esos métodos y si se están usando para este fin los registros de actividad de los entornos virtuales.
 
 \bigskip
 Por tanto, partiendo del objetivo principal, se definen las siguientes preguntas de investigación:
@@ -195,7 +195,7 @@ En la tabla \ref{tab:ResumenBusquedaResultados} se muestran las búsquedas reali
 \label{tab:ResumenBusquedaResultados}
 \end{table} 
 
-En total se recopilaron 313 trabajos para ser revisados. El número de estudios primarios resultante (después de aplicar criterios de selección y exclusión) fue de 30 trabajos (menos de un 10\percentage del total de trabajos recopilados). Además, 268 trabajos se catalogaron como fuera del tema (\emph{off topic}) ya que aunque  trataban en su mayoría la evaluación de competencias genéricas, no abordaban su evaluación con apoyo de tecnología, o si lo hacían no se indicaba. Los resultados de esta clasificación pueden verse en la tabla \ref{tab:ResumenSelecccionResultados}. A tenor de los resultados ofrecidos, y sobre todo del número de trabajos descartados, el lector puede pensar que se debieron añadir términos computacionales entre los criterios de búsqueda. Sin embargo, el número de términos informáticos que se podrían añadir a las búsquedas es muy amplio y trabajos que han sido recopilados en este trabajo hubieran quedado fuera en ese caso porque hubiera sido imposible tener todos los términos en cuenta.
+En total se recopilaron 313 trabajos para ser revisados. El número de estudios primarios resultante (después de aplicar criterios de selección y exclusión) fue de 30 trabajos (menos de un 10\percentage del total de trabajos recopilados). Además, 268 trabajos se catalogaron como fuera del tema (\emph{off topic}) ya que aunque  trataban en su mayoría la evaluación de competencias genéricas, no abordaban su evaluación con apoyo de tecnología, o si lo hacían no se indicaba. Los resultados de esta clasificación pueden verse en la tabla \ref{tab:ResumenSelecccionResultados}. A tenor de los resultados ofrecidos, y sobre todo del número de trabajos descartados, el lector puede pensar que se debieron añadir términos computacionales entre los criterios de búsqueda. Sin embargo, el número de términos informáticos que se podrían añadir a las búsquedas es muy amplio y trabajos que han sido recopilados en este trabajo hubieran quedado fuera en ese caso porque hubiera sido imposible tener todos los términos en cuenta. Además, el hecho de que las bases de datos utilizadas sean específicas de informática y computación es garantía suficiente de que sus aportaciones deben ser en su mayoría basadas en la tecnología.
 
 \begin{table}
   \begin{center}
@@ -270,7 +270,7 @@ Aunque las tecnologías entraron a formar parte de la vida académica hace ya va
 
 %\subsection{Características de los trabajos seleccionados}
 
-Todos los trabajos seleccionados evalúan una o varias competencias genéricas utilizando algún método, técnica e instrumento de evaluación. Para el esquema de clasificación se va a concretar para cada trabajo las competencias que evalúa, con qué método, técnica y herramienta lo hace. A continuación se van a describir para cada uno de estas características los valores que aparecerán en la revisión para que queden definidos todos los términos que aparecerán en el capítulo del esquema de clasificación.
+Todos los trabajos seleccionados evalúan una o varias competencias genéricas utilizando algún método, técnica e instrumento de evaluación. Para el esquema de clasificación se va a concretar para cada trabajo las competencias que evalúa, con qué método, técnica y herramienta lo hace. A continuación se van a describir para cada una de estas características los valores que aparecerán en la revisión para que queden definidos todos los términos que aparecerán en el capítulo del esquema de clasificación.
 
 \subsubsection{Competencias genéricas}
 
@@ -344,20 +344,6 @@ En cada uno de los trabajos seleccionados se llevaba a cabo un método de evalua
 \item Evaluación ipsativa (ipsative assessment): esta evaluación se realiza con respecto al nivel previo del estudiante. Puede medir el nivel con el que un estudiante ha desempeñado una tarea particular con respecto a su propio nivel medio de desempeño, con respecto a su mejor trabajo o con respecto a su trabajo más reciente. La evaluación ipsativas se suele correlacionar con el esfuerzo, para promover la recompensa al esfuerzo y mejorar la motivación para aprender~\cite{hughes2011towards}.
 \end{itemize}
 
-% Métodos antiguos
-
-%\begin{itemize}
-%\item \emph{PBL}: trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (PBL, del inglés, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante autoevaluación y evaluación entre iguales. En \cite{lasa2013problem} los profesores llevaron a cabo la evaluación del 90\percentage de las competencias utilizando la herramienta de rúbricas \emph{RubiStar}, mientras que los estudiantes mediante autoevaluación y evaluación entre iguales se encargaron del otro 10\percentage. 
-%\item \emph{Post-evaluación de trabajo en VLE}:  el proceso de evaluación de competencias genéricas se lleva a cabo después de haber trabajado los estudiantes en actividades de un VLE mediante cuestionarios que completan los propios estudiantes o el profesor. Los profesores confirman que el uso de herramientas web mejora la participación en la comunidad favoreciendo la colaboración y la construcción conocimiento compartido~\cite{starcic2008sustaining}. Las herramientas que suelen utilizarse son wikis, foros, actividades y e-portfolio. Esta última aparece en varios trabajos, un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica\cite{arno2011promoting}. 
-%\item \emph{TBL}: los estudiantes realizan una experiencia de \emph{aprendizaje basado en equipos} (TBL, del inglés, Team Based Learning) utilizando algún tipo de herramienta colaborativa. En~\cite{ficapal2015learning} se presenta un modelo que persigue el aprendizaje basado en equipos para la adquisición y evaluación de competencias genéricas en un contexto de e-learning. Los estudiantes trabajaban en grupo y evaluaban su desempeño en el \emph{trabajo en equipo} mediante una rúbrica. La calificación se completó con un cuestionario.
-%\item \emph{Trabajo con herramienta empresarial}: herramientas ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) acompañadas de rúbricas de autoevaluación.  En~\cite{chang2009international} se utiliza la herramienta Cycloid para el desarrollo de competencias en la gestión de proyectos y posteriormente se llevan a cabo autoevaluaciones de los propios estudiantes para valorar la adquisición de dichas competencias. También se autoevalúan competencias \emph{empresariales} en  \cite{achcaoucaou2014competence} mediante el uso de Tricuspoid. 
-%\item \emph{Videoconferencias}: los estudiantes realizan videoconferencias con herramientas como Skype o Hangouts y después son autoevaluados o evaluados por sus compañeros en la competencia o competencias que debería desempeñar en la videoconferencia~ \cite{masip2013self,ward2011developing}.
-%\item Modelo matemático itinerario aprendizaje: un itinerario de aprendizaje es un mapa conceptual que nos guía en el proceso de aprendizaje. En este tipo de trabajos se implementan los itinerarios de aprendizaje definiendo matemáticamente las fórmulas necesarias para evaluar cada bloque del curso a partir de sus actividad, y cómo se combinan para evaluar los objetivos del curso y las competencias genéricas~\cite{yang2014fine}.
-%\item \emph{Test psicológico definido por expertos}: crear un test que evalúe algún aspecto de la personalidad es un trabajo de expertos. En~\cite{andre2011formal} se propuso un modelo formal para asignar trabajadores a proyectos software. Para definir el modelo se siguió un método Delphi, donde un grupo de expertos definieron criterios para la evaluación de habilidades de trabajo en equipo y definieron un test psicológico.
-%\item \emph{GBL}: Metodologia de aprendizaje basado en juegos (GBL, del inglés, Game-Based Learning) que utiliza juegos digitales con el fin de apoyar y mejorar la enseñanza, el aprendizaje y/o la evaluación. Se puede establecer como una práctica donde los jugadores, a medida que van avanzado en las dinámicas del juego, deben evidenciar unas habilidades, conocimientos y competencias que muestran el alcance de los objetivos de aprendizaje~\cite{charlier2012not}.
-%\item \emph{Learning Analytics}: El learning analytics, traducido al español como análisis del aprendizaje, es definido por la \emph{Society for Learning Analytics} como la medición, recopilación, análisis y presentación de datos sobre los estudiantes, sus contextos y las interacciones que allí se generan, con el fin de comprender el proceso de aprendizaje que se está desarrollando y optimizar los entornos en los que se produce~\cite{siemens2012learning}.
-%\end{itemize}
-
 \subsubsection{Técnicas}
 
 En cada uno de los trabajos seleccionados se utilizó alguna técnica para llevar a cabo alguno de los métodos de evaluación anteriormente descritos. A continuación se describen el conjunto de técnicas que aparecen en estos trabajos:
@@ -367,7 +353,7 @@ En cada uno de los trabajos seleccionados se utilizó alguna técnica para lleva
 \item \emph{Pruebas escritas}: instrumento de medición cuyo propósito es que el estudiante demuestre la adquisición de un aprendizaje cognitivo, o el desarrollo progresivo de una destreza o habilidad. Por sus características, requiere contestación escrita por parte del estudiante~\cite{rojas2008prueba}. Algunos instrumentos que se utilizan en esta técnica son los exámenes escritos y los cuestionarios.
 \item \emph{Pruebas orales}: interacción oral evaluador-evaluado mediante la que el evaluado busca acreditar conocimiento sobre un tema determinado ante uno o varios evaluadores que a vez utilizarán esta exposición para calificar al evaluado en el desempeño de alguna competencia genérica. 
 \item \emph{Indicadores basados en logros}: indicadores que marcan si un resultado final o logro se ha alcanzado y para determinar así el grado en que cada competencias ha sido desarrollada. El propósito es conseguir que los estudiantes desarrollen competencias y los indicadores son el recurso para evaluar dicho desarrollo. Esta técnica es tipica en los juegos serios, en donde las distintas fases o etapas del juego con sus correspondientes logros se mapean a indicadores del nivel de desempeño de competencias genéricas.
-\item \emph{Indicadores de trabajo en VLE}: indicadores del proceso de desarrollo del trabajo realizado por los estudiantes (no del trabajo final en si). Encontramos estas técnicas en trabajos en los que tras haber trabajado los estudiantes en diferentes actividades del VLE son evaluados del desempeño en diferentes competencias a partir de los registros de interacción de estos estudiantes con el propio VLE. 
+\item \emph{Indicadores de trabajo en VLE}: indicadores del proceso de desarrollo del trabajo realizado por los estudiantes (no del trabajo final en sí). Encontramos estas técnicas en trabajos en los que tras haber trabajado los estudiantes en diferentes actividades del VLE son evaluados del desempeño en diferentes competencias a partir de los registros de interacción de estos estudiantes con el propio VLE. 
 \item \emph{Actividades sin determinar}: utilizaremos este término para referirnos a las técnicas que se han utilizado en trabajos en los que se indica que se han evaluado actividades pero no se menciona explícitamente el cómo. Por contexto pueden ser tanto actividades del VLE como actividades presenciales. No se presta atención a cómo son y cómo se evalúan esas actividades en particular, sino a que después se toma la calificación de cada actividad y de una u otra forma se mapea a la evaluación de alguna competencia. Quizás se usen rúbricas, cuestionarios o entrevistas, pero o no se mencionan o si lo hacen no está directamente relacionado con la evaluación de la competencia genérica.
 \end{itemize}
 
@@ -459,6 +445,16 @@ Desde el punto de vista de la evaluación hay dos tipos de trabajos:
 
 La autoevaluación es un proceso en el que los estudiantes evalúan su propio trabajo, mientras que  en el proceso de evaluación entre iguales un estudiante evalúa el trabajo de otro u otros estudiantes. Esta práctica se emplea por un lado para mejorar tanto el conocimiento en la materia del alumnado como sus habilidades metacognitivas, y por otro, para ahorrar tiempo del profesorado. A menudo este tipo de evaluación se acompaña de algún tipo de rúbrica \cite{malehorn1994ten}.
 
+En algunos trabajos el proceso de evaluación de competencias genéricas se lleva a cabo después de haber trabajado los estudiantes en actividades de un VLE mediante cuestionarios que completan los propios estudiantes o el profesor. Los profesores confirman que el uso de herramientas web mejora la participación en la comunidad favoreciendo la colaboración y la construcción de conocimiento compartido~\cite{starcic2008sustaining}. Las herramientas que suelen utilizarse son wikis, foros, actividades y e-portfolio. Esta última aparece en varios trabajos, un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica\cite{arno2011promoting}.
+
+Hay trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (PBL, del inglés, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante autoevaluación y evaluación entre iguales~\cite{martinez2014teamwork}. En \cite{lasa2013problem} los profesores llevaron a cabo la evaluación del 90\percentage de las competencias utilizando la herramienta de rúbricas \emph{RubiStar}, mientras que los estudiantes mediante autoevaluación y evaluación entre iguales se encargaron del otro 10\percentage. 
+
+En otro trabajos los estudiantes realizan una experiencia de \emph{aprendizaje basado en equipos} (TBL, del inglés, Team Based Learning) utilizando algún tipo de herramienta colaborativa. En~\cite{ficapal2015learning} se presenta un modelo que persigue el aprendizaje basado en equipos para la adquisición y evaluación de competencias genéricas en un contexto de e-learning. Los estudiantes trabajaban en grupo y evaluaban su desempeño en el \emph{trabajo en equipo} mediante una rúbrica. La calificación se completó con un cuestionario.
+
+Se encontraron varias experiencias que utilizan herramientas ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) que vienen acompañadas de rúbricas de autoevaluación.  En~\cite{chang2009international} se utiliza la herramienta Cycloid para el desarrollo de competencias en la gestión de proyectos y posteriormente se llevan a cabo autoevaluaciones de los propios estudiantes para valorar la adquisición de dichas competencias. También se autoevalúan competencias \emph{empresariales} en  \cite{achcaoucaou2014competence} mediante el uso de Tricuspoid.
+
+Otra experiencia se lleva a cabo a partir de herramientas de videconferencia como Skype o Hangouts. Los estudiantes realizan videoconferencias y después son autoevaluados o evaluados por sus compañeros en la competencia o competencias que debería desempeñar en la videoconferencia~ \cite{masip2013self}.
+
 A continuación se van a enumerar las competencias que se han evaluado, los métodos que se han seguido y las técnicas y herramientas que se han utilizado para llevar a cabo estas evaluaciones.
 
 \paragraph*{Competencias evaluadas}
@@ -517,7 +513,7 @@ El uso de tecnologías de la información (\emph{TIC}) y el \emph{idioma} son la
 \end{table}
 
 \paragraph*{Métodos, técnicas e instrumentos de evaluación}
-En~\ref{tab:MetodosAuto} se indican los métodos, técnicas e instrumentos de evaluación seguidas por cada uno de los trabajos que sigue este enfoque de autoevaluación y evaluación entre iguales. El método más utilizado es la post-evaluación del trabajo en el VLE (6 trabajos), mientras que las técnicas de observación sistemática y las pruebas escritas son los métodos más utilizados con 5 y 6 trabajos respectivamente, utilizando como herramientas cuestionarios y rúbricas. Podemos decir que el patrón clásico de este tipo de trabajos consiste en que los estudiantes se autoevalúan o evalúan a sus compañeros una vez terminado el trabajo que debían realizar en el VLE mediante rúbricas y cuestionarios. 
+En la tabla~\ref{tab:MetodosAuto} se indican los métodos, técnicas e instrumentos de evaluación seguidas por cada uno de los trabajos que sigue este enfoque de autoevaluación y evaluación entre iguales. El método de evaluación más empleado es el sumativo (8 trabajos), mientras que las técnicas de observación sistemática y las pruebas escritas son los métodos más utilizados con 5 y 6 trabajos respectivamente, utilizando como herramientas cuestionarios y rúbricas. Podemos decir que el patrón clásico de este tipo de trabajos consiste en que los estudiantes se autoevalúan o evalúan a sus compañeros una vez terminado el trabajo que debían realizar en el VLE mediante rúbricas y cuestionarios. 
 
 \begin{table}
   \begin{center}
@@ -557,7 +553,9 @@ Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan tr
 
 En esta sección se incluyen trabajos en los que la evaluación la realiza directamente el profesor apoyándose en la tecnología. En su mayoría son trabajos en los que el profesor ha de corregir cuestionarios con preguntas abiertas, en los que utiliza rúbricas para evaluar el trabajo de sus estudiantes en las herramientas del VLE o en los que evalúa competencias genéricas a partir de las calificaciones de los estudiantes en las actividades que han realizado durante el curso. 
 
-%La evaluación de las competencias genéricas por parte de los profesores se suele llevar a cabo en contextos de \emph{evaluación continua}. Esto permite ir introduciendo mejoras constantes en el proceso de aprendizaje, siendo éste el motivo por el que la evaluación continua se adopta como una estrategia de evaluación formativa más orientada al proceso de aprendizaje que a una valoración puntual. Actualmente, los expertos, influenciados por la \emph{Declaración de Bolonia}, consideran más apropiado desarrollar este tipo de sistemas de evaluación~\cite{garcia2005competencias}. 
+En este tipo de trabajos se repiten experiencias ya vistas en la autoevaluación y evaluación entre iguales para la evaluación de competencias genéricas. Trabajos en los que la evaluación se realiza después de haber trabajado los estudiantes con herramientas del VLE~\cite{starcic2008sustaining}, metodologías PBL~\cite{lacuesta2009active} o experiencias basadas en videoconferencias~\cite{ward2011developing}.
+
+En~\cite{yang2014fine} se implementa un itinerario de aprendizaje incluyendo la evaluación de competencias genéricas en dicho itinerario. Un itinerario de aprendizaje es un mapa conceptual que nos guía en el proceso de aprendizaje. En este tipo de trabajos se implementan los itinerarios de aprendizaje definiendo matemáticamente las fórmulas necesarias para evaluar cada bloque del curso a partir de sus actividad, y cómo se combinan para evaluar los objetivos del curso y las competencias genéricas.
 
 \paragraph*{Competencias evaluadas}
 Las competencia genérica más evaluada mediante la evaluación del profesor es la \emph{comunicación} oral y escrita (6 trabajos). En estos trabajos los profesores evalúan a los estudiantes mediante la corrección de documentos escritos y presentaciones orales. También le siguen de cerca los trabajos que evalúan las competencias de \emph{trabajo en equipo} y de \emph{resolución de problemas} (5 trabajos cada una). En la tabla~\ref{tab:CompetenciasProfesor} puede ver la relación de competencias evaluadas y los trabajos.
@@ -617,9 +615,8 @@ Las competencia genérica más evaluada mediante la evaluación del profesor es 
 
 
 \paragraph*{Métodos, Técnicas e instrumentos de evaluación}
-Además de los métodos utilizados en el enfoque anterior se incorpora aquí el \emph{modelo matemático itinerario aprendizaje}. En~\cite{yang2014fine} se define un modelo de itinerario de aprendizaje que soporta la evaluación de algunos conocimientos y competencias para describir el progreso de aprendizaje del estudiante. En el modelo se definen las fases, actividades, evaluaciones y ponderaciones. Se define matemáticamente para poder formalmente definir las evaluaciones y para poder reutilizar las fórmulas. 
 
-Dentro de la evaluación del profesor el método más seguido vuelve a ser la post-evaluación del trabajo en el VLE (6 trabajos), la técnica más utilizada, la observación sistemática (6 trabajos) y la herramienta más utilizada, la rúbrica (4 trabajos). Puede verse el listado completo de métodos, herramientas y técnicas en la tabla~\ref{tab:MetodosProfesor}.
+Dentro de la evaluación del profesor el método de evaluación más seguido vuelve a ser el sumativo (5 trabajos), seguido de cerca por el formativo (4 trabajos). La técnica más utilizada es la observación sistemática (6 trabajos) y la herramienta más utilizada, la rúbrica (4 trabajos). Puede verse el listado completo de métodos, herramientas y técnicas en la tabla~\ref{tab:MetodosProfesor}.
 
 \begin{table}
   \begin{center}
@@ -657,9 +654,15 @@ Dentro de la evaluación del profesor el método más seguido vuelve a ser la po
 \paragraph*{Análisis}
 La escalabilidad es el problema más mencionado por los autores en los trabajos recopilados. En~\cite{serrano2013hiperion} se diseña \emph{Hiperion}, un sistema de recomendación que ayuda a diseñar actividades adaptadas a cada estudiante para mejorar sus competencias. En su estudio de caso los profesores evaluaban las competencias de los estudiantes manualmente y después aplicaban Hiperion. La principal desventaja de la herramienta es el tiempo que el profesor ha de dedicar para asignar los diferentes logros y el peso de cada nota para cada competencia en las actividades. En línea con los problemas de escalabilidad anteriores nos encontramos con el trabajo mostrado en~\cite{lacuesta2009active}. En él se utiliza una metodología PBL, en la que se realiza una evaluación individualizada de cada estudiante y de cada grupo de estudiantes. El autor considera también que el esfuerzo necesario y carga de trabajo para cada profesor es un poco mayor al habitual. Lo mismo ocurre en~\cite{benlloch2007adapting}, trabajo en el que los profesores concluyeron que el esfuerzo que realizaron fue excesivo a pesar de los buenos resultados obtenidos y descartaron el uso del portfolio para próximas experiencias ya que les supone una gran carga de trabajo sobre todo en el tramo final del curso.
 
-\subsubsection{Evaluación automática}
+\subsubsection{Evaluación semiautomática}
 
-Las herramientas de evaluación automática son herramientas informáticas que ayudan al docente en el proceso de la evaluación automatizando dicho proceso y proporcionando una calificación o indicador para cada estudiante susceptible de ser aplicado a la evaluación de su desempeño en una o varias competencias genéricas. %Puede haber diferentes niveles de automatización dependiendo de cuánto tenga que intervenir el docente en el proceso. Un caso típico en el que los profesores han tratado de automatizar el proceso de evaluación se da en las asignaturas de programación en las titulaciones de informática. Un ejemplo de esto puede verse en~\cite{jackson2000semi}, trabajo del año 2000 en el que se muestra un software que prueba automáticamente todos los programas de los estudiantes, evitando que el profesor tenga que afrontar la tediosa tarea de ejecutar de uno en uno dichos programas. El sistema genera una serie de métricas y muestra al profesor finalmente el código fuente, para que éste pueda considerar y calificar otros aspectos relativos a la calidad que eran más difíciles de automatizar. Por otro lado en~\cite{vujovsevic2013software} tenemos un trabajo del año 2013 que muestra un software totalmente automático que evalúa los programas creados por los estudiantes desde tres perspectivas: funcionamiento, verificación y similitud con grafo de control de flujo.
+Las herramientas de evaluación semiautomática son herramientas informáticas que ayudan al docente en el proceso de la evaluación automatizando dicho proceso y proporcionando una calificación o indicador para cada estudiante susceptible de ser aplicado a la evaluación de su desempeño en una o varias competencias genéricas. Estas herramientas requieren una intervención inicial del profesor para introducir datos o configurar la herramienta. %Puede haber diferentes niveles de automatización dependiendo de cuánto tenga que intervenir el docente en el proceso. Un caso típico en el que los profesores han tratado de automatizar el proceso de evaluación se da en las asignaturas de programación en las titulaciones de informática. Un ejemplo de esto puede verse en~\cite{jackson2000semi}, trabajo del año 2000 en el que se muestra un software que prueba automáticamente todos los programas de los estudiantes, evitando que el profesor tenga que afrontar la tediosa tarea de ejecutar de uno en uno dichos programas. El sistema genera una serie de métricas y muestra al profesor finalmente el código fuente, para que éste pueda considerar y calificar otros aspectos relativos a la calidad que eran más difíciles de automatizar. Por otro lado en~\cite{vujovsevic2013software} tenemos un trabajo del año 2013 que muestra un software totalmente automático que evalúa los programas creados por los estudiantes desde tres perspectivas: funcionamiento, verificación y similitud con grafo de control de flujo.
+
+En~\cite{andre2011formal} se propuso un modelo formal para asignar trabajadores a proyectos software. Para definir el modelo se siguió un método Delphi, donde un grupo de expertos definieron criterios para la evaluación de habilidades de trabajo en equipo y definieron un test psicológico.
+
+Encontramos trabajos en los que se emplea una metodologia de aprendizaje basado en juegos (GBL, del inglés, Game-Based Learning)~\cite{bedek2011behavioral,guenaga2013serious}. En ellos se utilizan juegos digitales con el fin de apoyar y mejorar la enseñanza, el aprendizaje y/o la evaluación. Se puede establecer como una práctica donde los jugadores, a medida que van avanzado en las dinámicas del juego, deben evidenciar unas habilidades, conocimientos y competencias que muestran el alcance de los objetivos de aprendizaje~\cite{charlier2012not}.
+
+Y finalmente encontramos trabajos que se basan en técnicas de \emph{learning analytics}~\cite{fidalgo:2015,rayon2014web}, traducido al español como análisis del aprendizaje. El \emph{learning analytics} es definido por la \emph{Society for Learning Analytics} como la medición, recopilación, análisis y presentación de datos sobre los estudiantes, sus contextos y las interacciones que allí se generan, con el fin de comprender el proceso de aprendizaje que se está desarrollando y optimizar los entornos en los que se produce~\cite{siemens2012learning}.
 
 \paragraph*{Competencias evaluadas}
  En la tabla~\ref{tab:CompetenciasAutomaticas} se muestran las competencias evaluadas y los trabajos en que se evalúan. Aunque son pocos trabajos los que encontramos en este grupo, cabe destacar que vuelve a ser la competencia de la \emph{comunicación} la más evaluada.
@@ -711,12 +714,12 @@ Las herramientas de evaluación automática son herramientas informáticas que a
     \hline
   \end{tabular}
 \end{center}
-\caption{Competencias evaluadas de manera automática}
+\caption{Competencias evaluadas de forma semiautomática}
 \label{tab:CompetenciasAutomaticas}
 \end{table} 
 
 \paragraph*{Métodos, Técnicas e instrumentos de evaluación}
-Se han utilizado tres métodos diferentes para la evaluación automática de competencias genéricas: el test psicológico definido por expertos (1 trabajo), GBL (2 trabajos) y Learning Analytics (2 trabajos). Se puede ver cada método junto con las técnicas y herramientas empleadas en la tabla~\ref{tab:MetodosAutomaticos}.
+El método de evaluación formativo es el más empleado (3 trabajos). Al haber pocos trabajos no hay ninguna tendencia que destacar con respecto a las técnicas y las herramientas. Se puede ver cada método junto con las técnicas y herramientas empleadas en la tabla~\ref{tab:MetodosAutomaticos}.
 
 \begin{table}
   \begin{center}
@@ -738,7 +741,7 @@ Se han utilizado tres métodos diferentes para la evaluación automática de com
     \hline
   \end{tabular}
 \end{center}
-\caption{Instrumentos de evaluación y métodos correspondientes a los trabajos de evaluación automática}
+\caption{Instrumentos de evaluación y métodos correspondientes a los trabajos de evaluación semiautomática}
 \label{tab:MetodosAutomaticos}
 \end{table} 
 
@@ -761,7 +764,7 @@ En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de
 
 %En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje. Para ello utilizan una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}), un panel que da soporte a los procesos de aprendizaje y evaluación proporcionando una perspectiva visual del análisis del aprendizaje mediante la recolección de datos sociales y de uso desde diferentes entornos de aprendizaje como Moodle, Google Apps para la educación y MediaWiki. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Mediante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evalúan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
 
-En el primer trabajo en el que se utilizan los registros de actividad de los entornos de aprendizaje~\cite{rayon2014web} se utiliza LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
+En el primer trabajo en el que se utilizan los registros de actividad de los entornos de aprendizaje se utiliza LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad~\cite{rayon2014web}. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
 
 \begin{itemize}
 \item \emph{Gestión del tiempo}. Indicador: Cumplimiento de la planificación, es decir, número de acciones que se han hecho a tiempo con respecto a la planificación fijada en una hoja de cálculo de Google.
@@ -774,7 +777,7 @@ En el primer trabajo en el que se utilizan los registros de actividad de los ent
 \item \emph{Pensamiento analítico}. Indicador: identificación de errores o falta de coherencia en sus propias ideas, es decir, número de veces que un estudiante releyó sus comentarios.
 \end{itemize}
 
-En el segundo trabajo que utiliza los registros de aprendizaje~\cite{fidalgo:2015} se utiliza el método CTMTC (\emph{Comprehensive Training Model of the Teamwork Competence}), un método que integra herramientas que están presentes en diferentes entornos de aprendizaje virtual y que facilita el registro de la interacción de los estudiantes y por tanto un acceso más sencillo a las evidencias del trabajo en equipo. El registro de esta interacción en el foro era una tarea tediosa para ser realizada a mano, por lo que implementaron el \emph{LA system}. \emph{LA system} se implementa como un servicio web en Moodle, de forma que la información sea accesible a través de internet con mensajes basados en XML. Esta información después es consumida por un cliente que proporciona una visión apropiada de los datos. Los indicadores utilizados son:
+En el segundo trabajo que utiliza los registros de aprendizaje se utiliza el método CTMTC (\emph{Comprehensive Training Model of the Teamwork Competence}), un método que integra herramientas que están presentes en diferentes entornos de aprendizaje virtual y que facilita el registro de la interacción de los estudiantes y por tanto un acceso más sencillo a las evidencias del trabajo en equipo~\cite{fidalgo:2015}. El registro de esta interacción en el foro era una tarea tediosa para ser realizada a mano, por lo que implementaron el \emph{LA system}. \emph{LA system} se implementa como un servicio web en Moodle, de forma que la información sea accesible a través de internet con mensajes basados en XML. Esta información después es consumida por un cliente que proporciona una visión apropiada de los datos. Los indicadores utilizados son:
 
 \begin{itemize}
 \item Mensajes escritos en foro: interacción estudiante-estudiante activo.
@@ -932,7 +935,7 @@ Estos grupos se han separado en la categorización final debido al elevado núme
 
 La herramienta que más se utiliza tanto en la evaluación del profesor como en la evaluación entre iguales o autoevaluación es la rúbrica electrónica. El problema que encontramos es estos trabajos que utilizan rúbricas es que si el profesor se encarga de la evaluación, la carga de trabajo de éste aumenta~\cite{lacuesta2009active}. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales pueden aparecer discrepancias entre las calificaciones que se auto-asignan los estudiantes y las que realmente merecen~\cite{carreras2013promotion}. 
 
-Dentro de la evaluación automática se seleccionaron 5 trabajos, entre los que se encuentran algunos basados en juegos serios~\cite{djaouti2011classifying,bedek2011behavioral} y otros basados en el análisis de los procesos de aprendizaje~\cite{rayon2014web,fidalgo:2015}.
+Dentro de la evaluación semiautomática se seleccionaron 5 trabajos, entre los que se encuentran algunos basados en juegos serios~\cite{djaouti2011classifying,bedek2011behavioral} y otros basados en el análisis de los procesos de aprendizaje~\cite{rayon2014web,fidalgo:2015}.
 
 Pueden verse las competencias genéricas evaluadas con cada método en las figuras~\ref{fig:competencias1} y~\ref{fig:competencias2} .
 
